# soulseed

./: .env.example  .gitignore  README.md
docs/: awareness_events_schema.md
docs/api/: soulseed_thin_waist.md
docs/playbooks/: dialogue_event_stage5.md
docs/regression/: dialogue_event_migration.md
docs/schema-updates/: 2025-09-24-dialogue-event.md  2025-11-01-graph-topology.md
docs/schemas/: dialogue_event_v2.sql
docs/schemas/awareness/: awareness_event.v1.schema.json
migrations/surreal/: 001_soulseed_init.sql  002_dialogue_event_v2.sql  003_graph_topology.sql
soulseed-agi-ace/: Cargo.toml
soulseed-agi-ace/src/: aggregator.rs  budget.rs  ca.rs  checkpointer.rs  collab.rs  continuation.rs  emitter.rs  engine.rs  errors.rs  hitl.rs  lib.rs  llm.rs  metrics.rs  outbox.rs  recovery.rs  runtime.rs  scenario_stack.rs  scheduler.rs  slo.rs  tool_gateway.rs  tw_gateway.rs  types.rs
soulseed-agi-ace/src/outbox/: redis.rs
soulseed-agi-ace/src/persistence/: mod.rs  surreal.rs
soulseed-agi-ace/tests/: contract.rs  e2e_cycle_flow.rs  e2e_four_forks.rs  e2e_hitl_flow.rs  edge_cases.rs
soulseed-agi-authz/: Cargo.toml
soulseed-agi-authz/examples/: min.rs
soulseed-agi-authz/src/: api.rs  cache.rs  errors.rs  evaluator.rs  lib.rs  mock.rs  policy.rs  quota.rs  ticket.rs  types.rs  validate.rs
soulseed-agi-authz/tests/: contract.rs
soulseed-agi-context/: Cargo.toml
soulseed-agi-context/examples/: min.rs
soulseed-agi-context/src/: assembly.rs  compress.rs  config.rs  engine.rs  env_gateway.rs  errors.rs  index.rs  lib.rs  obs.rs  planner.rs  pointer.rs  qgate.rs  score.rs  store.rs  thinwaist.rs  traits.rs  types.rs  validate.rs
soulseed-agi-context/tests/: contract.rs  e2e_clarify_tool_final.rs
soulseed-agi-core-models/: Cargo.toml
soulseed-agi-core-models/examples/: min.rs
soulseed-agi-core-models/src/: awareness.rs  common.rs  components.rs  contracts.rs  dialogue_event.rs  enums.rs  ids.rs  lib.rs  message.rs  profiles.rs  relationships.rs  resources.rs  session.rs  validate.rs  vectors_ext.rs
soulseed-agi-core-models/src/dialogue_event/: payload.rs  v2.rs
soulseed-agi-core-models/src/legacy/: dialogue_event.rs  mod.rs
soulseed-agi-core-models/tests/: contract.rs
soulseed-agi-dfr/: Cargo.toml
soulseed-agi-dfr/src/: engine.rs  errors.rs  filter.rs  fingerprint.rs  hardgate.rs  lib.rs  planner.rs  router.rs  scorer.rs  types.rs  validator.rs
soulseed-agi-dfr/tests/: contract.rs
soulseed-agi-envctx/: Cargo.toml  README.md
soulseed-agi-envctx/src/: canon.rs  dto.rs  engine.rs  errors.rs  facade.rs  lib.rs  provision.rs  tests.rs  tw_client.rs
soulseed-agi-graph/: Cargo.toml
soulseed-agi-graph/examples/: min.rs
soulseed-agi-graph/src/: api.rs  errors.rs  graph_edges.rs  graph_nodes.rs  lib.rs  maintenance.rs  mock.rs  plan.rs  planner.rs  scenario.rs  types.rs  validate.rs  version_chain.rs
soulseed-agi-graph/src/metacognition/: analyzer.rs  auditor.rs  causal_tracer.rs  mod.rs  pattern_detector.rs  profiler.rs  types.rs
soulseed-agi-graph/tests/: contract.rs
soulseed-agi-llm/: Cargo.toml
soulseed-agi-llm/src/: dto.rs  engine.rs  errors.rs  explainer.rs  integrator.rs  lib.rs  orchestrator.rs  planner.rs  router.rs  tw_client.rs
soulseed-agi-llm/tests/: pipeline.rs  thinwaist_contract.rs  thinwaist_http.rs
soulseed-agi-tools/: Cargo.toml
soulseed-agi-tools/examples/: min.rs
soulseed-agi-tools/src/: config.rs  dto.rs  engine.rs  enhancement.rs  errors.rs  explainer.rs  lib.rs  metrics.rs  orchestrator.rs  planner.rs  router.rs  traits.rs  tw_client.rs
soulseed-agi-tools/tests/: contract.rs  tw_client_http.rs
src/: ca.rs
