[package]
name = "soulseed-agi-ace"
version = "0.1.0"
edition = "2024"

[features]
default = ["event-v2"]
strict-privacy = [
    "soulseed-agi-core-models/strict-privacy",
    "soulseed-agi-tools/strict-privacy",
]
uuidv7 = [
    "soulseed-agi-core-models/uuidv7",
    "soulseed-agi-tools/uuidv7",
]
vectors-extra = [
    "soulseed-agi-core-models/vectors-extra",
    "soulseed-agi-tools/vectors-extra",
]
event-v2 = [
    "soulseed-agi-core-models/event-v2",
    "soulseed-agi-tools/event-v2",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
blake3 = "1"
sha2 = "0.10"
soulseed-agi-core-models = { path = "../soulseed-agi-core-models" }
soulseed-agi-tools = { path = "../soulseed-agi-tools" }
soulseed-agi-context = { path = "../soulseed-agi-context" }
soulseed-agi-authz = { path = "../soulseed-agi-authz" }
soulseed-agi-dfr = { path = "../soulseed-agi-dfr" }

[dev-dependencies]
once_cell = "1"
