[package]
name = "soulseed-agi-ace"
version = "0.1.0"
edition = "2024"

[features]
default = ["event-v2", "persistence-surreal"]
strict-privacy = [
    "soulseed-agi-core-models/strict-privacy",
    "soulseed-agi-tools/strict-privacy",
]
uuidv7 = [
    "soulseed-agi-core-models/uuidv7",
    "soulseed-agi-tools/uuidv7",
]
vectors-extra = [
    "soulseed-agi-core-models/vectors-extra",
    "soulseed-agi-tools/vectors-extra",
]
event-v2 = [
    "soulseed-agi-core-models/event-v2",
    "soulseed-agi-tools/event-v2",
]
persistence-surreal = [
    "soulbase-storage",
    "soulbase-storage/surreal",
    "soulbase-types",
    "tokio"
]
# outbox-redis = [
#     "persistence-surreal",
#     "sb-tx",
#     "sb-tx/surreal",
#     "sb-tx/transport-redis",
#     "tokio"
# ]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
blake3 = "1"
sha2 = "0.10"
soulseed-agi-core-models = { path = "../soulseed-agi-core-models" }
soulseed-agi-tools = { path = "../soulseed-agi-tools" }
soulseed-agi-context = { path = "../soulseed-agi-context" }
soulseed-agi-authz = { path = "../soulseed-agi-authz" }
soulseed-agi-dfr = { path = "../soulseed-agi-dfr" }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "time", "macros", "signal"] }
# 旧版本 soulbase 依赖（已废弃）
# sb-storage = { path = "../../soulbase/crates/sb-storage", optional = true }
# sb-tx = { path = "../../soulbase/crates/sb-tx", optional = true }
# sb-types = { path = "../../soulbase/crates/sb-types", optional = true }

# 新版本 soul-base 依赖
soulbase-storage = { path = "../../soul-base/crates/soulbase-storage", version = "1.0.0", optional = true, features = ["surreal"] }
soulbase-tx = { path = "../../soul-base/crates/soulbase-tx", version = "1.0.0", optional = true, features = ["surreal"] }
soulbase-types = { path = "../../soul-base/crates/soulbase-types", version = "1.0.0", optional = true }
soulbase-llm = { path = "../../soul-base/crates/soulbase-llm", version = "1.0.0", features = ["provider-openai", "provider-claude", "provider-gemini"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
once_cell = "1"
