[package]
name = "soulseed-agi-context"
version = "0.1.0"
edition = "2021"
authors = ["Soulseed Team"]
description = "SoulseedAGI Context Infrastructure contracts"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["uuidv7", "strict-privacy"]
uuidv7 = ["soulseed-agi-core-models/uuidv7", "soulseed-agi-envctx/uuidv7"]
strict-privacy = [
    "soulseed-agi-core-models/strict-privacy",
    "soulseed-agi-envctx/strict-privacy",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
thiserror = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
soulseed-agi-core-models = { path = "../soulseed-agi-core-models", default-features = false }
soulseed-agi-envctx = { path = "../soulseed-agi-envctx", default-features = false }
