[package]
name = "soulseed-agi-core-models"
version = "0.1.0"
edition = "2021"
authors = ["Soulseed Team"]
description = "Core data model definitions for SoulseedAGI"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["uuidv7", "strict-privacy", "event-v2"]
uuidv7 = []
id-u64 = []
strict-privacy = []
vectors-extra = []
event-v2 = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
thiserror = "1"
semver = { version = "1", features = ["serde"] }
