[package]
name = "soulseed-agi-dfr"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
soulseed-agi-core-models = { path = "../soulseed-agi-core-models" }
soulseed-agi-tools = { path = "../soulseed-agi-tools" }
soulseed-agi-context = { path = "../soulseed-agi-context" }
soulseed-agi-authz = { path = "../soulseed-agi-authz" }
blake3 = "1"

[dev-dependencies]
once_cell = "1"
