[package]
name = "soulseed-agi-graph"
version = "0.1.0"
edition = "2021"
authors = ["Soulseed Team"]
description = "SoulseedAGI conversation graph contracts"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["strict-privacy", "uuidv7"]
strict-privacy = ["soulseed-agi-core-models/strict-privacy"]
uuidv7 = ["soulseed-agi-core-models/uuidv7"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
thiserror = "1"
soulseed-agi-core-models = { path = "../soulseed-agi-core-models", default-features = false }

[dev-dependencies]
